--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Laboratorio 1 - Animales</title>
+</head>
+
+<body>
+    <h1>Animales en via de extinción</h1>
+    <h2>Conoce a estos animalitos</h2>
+    <table>
+
+        <th>
+            <td colspan="3">Animalitos</td>
+        </th>
+        <tr>
+            <td> <img src="images/panda.jpg" alt="Panda" width="80%"></td>
+            <td> <img src="images/osoPolar.jpg" alt="Oso Polar" width="80%"></td>
+            <td> <img src="images/tigreBengala.jpg" alt="Tigre de Bengala" width="80%"></td>
+        </tr>
+        <tr>
+            <td> <img src="images/lemur.jpg" alt="Lemur" width="80%"></td>
+            <td> <img src="images/ajolote.jpg" alt="Ajolote" width="80%"></td>
+            <td> <img src="images/leopardoDeNieve.jpg" alt="Leopardo de Nieve" width="80%"></td>
+        </tr>
+    </table>
+</body>
+
+</html>
